--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,4 @@
+/* Configuraciones globales: */
 *{
     padding: 0;
     margin:0;
@@ -6,5 +7,74 @@
 
 .row{
     max-width: 1140px;
-    margin: 0 auto;
+    margin: 0 auto; 
 }
+
+html {
+    background-color: #fff;
+    color: rgb(72, 72, 72);
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+    text-rendering: optimizeLegibility;
+}
+
+
+/* Encabezados: */
+h1{
+    color:#d1d1d1;
+    margin-top: 0;
+    margin-bottom: 20px;
+    font-size: 240%;
+    letter-spacing: 4px;
+    letter-spacing: 1px;
+}
+
+/* nav */
+
+/* home-container */
+
+header{
+    background-image: linear-gradient(rgba(0,0,0,0.705),rgba(0,0,0,0.705)),url(../image/bg.jpeg);
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+}
+
+#logo{
+    height: 200px;
+    width: auto;
+    float: left;
+    margin-left: 100px;
+    margin-right: 50px;
+}
+
+.nav{
+    float: right;
+    list-style: none;
+    margin-top: 60px;
+    margin-right: 70px;
+
+
+}
+.nav li{
+    display: inline-block;
+    margin-left: 40px;
+
+}
+.nav li a{
+    text-decoration: none;
+    color: white;
+    font-size: 90%;
+    letter-spacing: 2px;
+    word-spacing: 4px;
+    transition: border-bottom 0.6s;
+}
+
+.nav li a:hover{
+    border-bottom: 2px solid rgb(253, 63, 5);
+
+}
+
+/* Configuraciones particulares: */
+
