--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,6 +19,10 @@ html {
     text-rendering: optimizeLegibility;
 }
 
+section{
+    padding: 90px 0;
+}
+
 
 /* Encabezados: */
 h1{
@@ -30,6 +34,23 @@ h1{
     letter-spacing: 1px;
 }
 
+h2{
+    font-size: 180%;
+    word-spacing: 2px;
+    text-align: center;
+    margin-bottom: 30px;
+    letter-spacing: 1px;
+}
+h2:after{
+    display: block;
+    height: 2px;
+    width: 100px;
+    background-color: rgb(189, 101, 2);
+    content: "";
+    margin: 0 auto;
+    margin-top: 30px;
+
+}
 
 /* home-container */
 
@@ -142,7 +163,13 @@ header{
     border: 3px solid  black;
 
 }
+/*Section Description */
+.text-content{
 
+    line-height: 145%;
+    width: 70%;
+    margin-left: 12%;
+}
 
 
 
