--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,7 +7,7 @@
 
 .row{
     max-width: 1140px;
-    margin: 0 auto; 
+    margin: 0 auto;
 }
 
 html {
@@ -20,7 +20,8 @@ html {
 }
 
 section{
-    padding: 90px 0;
+    padding: 80px 0;
+    background-color: oldlace;
 }
 
 
@@ -51,6 +52,11 @@ h2:after{
     margin-top: 30px;
 
 }
+h3{
+    text-align: center;
+    font-size: 30px;
+}
+
 
 /* home-container */
 
@@ -76,9 +82,7 @@ header{
 .nav{
     float: right;
     list-style: none;
-    margin-top: 60px;
-    margin-right: 70px;
-
+    margin: 60px 70px;
 
 }
 .nav li{
@@ -112,7 +116,7 @@ header{
     border-radius: 15px;
 }
 
-/* Configuraciones particulares: */
+/* Configuraciones clase: home-container y btn: */
 
 .home-container{
     display: inline-block;
@@ -144,9 +148,9 @@ header{
 .btn-more:active{
     transition: 0.3s;
     padding: 8px 28px;
-    background-color: rgb(189, 101, 2);
+    background-color: white;
     color:black;
-    border: 3px solid  black;
+    border: 3px solid  white;
 
 }
 .btn-contact:hover{
@@ -158,18 +162,42 @@ header{
 .btn-contact:active{
     transition: 0.3s;
     padding: 8px 28px;
-    background-color: rgb(189, 101, 2);
+    background-color: white;
     color:black;
-    border: 3px solid  black;
+    border: 3px solid  white;
 
 }
+
 /*Section Description */
 .text-content{
-
     line-height: 145%;
     width: 70%;
     margin-left: 12%;
 }
 
+/*Section de Tecnologías*/
+
+.icono-activo{
+    transition: 0.9s;
+    margin: 0 auto;
+    image-orientation: center;
+        
+}
+
+.icono-activo:hover{
+    transform: scale(1.1);
+    transition: 0.9s;
+    
+}
+.desicon{
+    margin-top:-12px;
+    font-size: 15px;
+    text-align: center;
+}
+.plan-content{
+    margin: 0 auto;
+    image-orientation: center;
+    text-align: center;
+}
 
 
